@@ -70,9 +70,6 @@ LONG-TERM:
 
     * add: < berkus> add smooth fade outs on stop
 
-    * change: < berkus> the volume slider is too small to make good adjustment,
-      move it to the right and maximize height (?)
-
     * add: make PlayerWidget shadeable (like XMMS)
 
     * display some information about current track in browserwin
