@@ -68,7 +68,7 @@ BrowserWin::BrowserWin( QWidget *parent, const char *name ) :
 {
     setName( "BrowserWin" );
     setIcon( QPixmap( locate( "icon", "locolor/32x32/apps/amarok.png" ) ) );
-    setFont ( QFont( "Arial", 9 ) );
+    setFont ( pApp->m_browserWindowFont );
 
     setCaption( kapp->makeStdCaption( i18n("Playlist") ) );
     setAcceptDrops( true );
@@ -89,6 +89,9 @@ BrowserWin::BrowserWin( QWidget *parent, const char *name ) :
 
     connect( m_pButtonShuffle, SIGNAL( clicked() ),
              this, SLOT( slotShufflePlaylist() ) );
+
+    connect( pApp, SIGNAL( sigUpdateFonts() ),
+             this, SLOT( slotUpdateFonts() ) );
 }
 
 
@@ -135,7 +138,7 @@ void BrowserWin::initChildren()
     QToolTip::add( m_pBrowserLineEdit, i18n("Enter directory/URL") );
     m_pBrowserLineEdit->setPaletteBackgroundColor( pApp->m_bgColor );
     m_pBrowserLineEdit->setPaletteForegroundColor( pApp->m_fgColor );
-    m_pBrowserLineEdit->setFont ( QFont( "Arial", 9 ) );
+    m_pBrowserLineEdit->setFont ( pApp->m_browserWindowFont );
     KURLCompletion *compBrowser = new KURLCompletion( KURLCompletion::DirCompletion );
     //disabled because the popup combo is useful
     //    m_pBrowserLineEdit->setCompletionMode( KGlobalSettings::CompletionAuto );
@@ -146,7 +149,7 @@ void BrowserWin::initChildren()
     QToolTip::add( m_pPlaylistLineEdit, i18n("Enter Filter String") );
     m_pPlaylistLineEdit->setPaletteBackgroundColor( pApp->m_bgColor );
     m_pPlaylistLineEdit->setPaletteForegroundColor( pApp->m_fgColor );
-    m_pPlaylistLineEdit->setFont ( QFont( "Arial", 9 ) );
+    m_pPlaylistLineEdit->setFont ( pApp->m_browserWindowFont );
     connect( m_pPlaylistLineEdit, SIGNAL( textChanged( const QString& ) ), m_pPlaylistWidget, SLOT( slotTextChanged( const QString& ) ) );
 
     QBoxLayout *layBrowserWidget = new QVBoxLayout( pBrowserWidgetContainer );
@@ -474,5 +477,11 @@ void BrowserWin::slotKeyDelete()
     {}
 }
 
+void BrowserWin::slotUpdateFonts()
+{
+    setFont ( pApp->m_browserWindowFont );
+    m_pBrowserLineEdit->setFont ( pApp->m_browserWindowFont );
+    m_pPlaylistLineEdit->setFont ( pApp->m_browserWindowFont );
+}
 
 #include "browserwin.moc"
